plain-manifests/tour-of-heroes-sql/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: only-api-can-access-sql-server
spec:
  podSelector:
    matchLabels:
      app: tour-of-heroes-sql
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: tour-of-heroes-api
    ports:
    - protocol: TCP
      port: 1433
